# muritz

./: .gitignore  Makefile.in  README.md  configure  configure.ac  muritz  muritz.py  option_parser.py  pairs.txt  setup.py  setup.py~  test.out
data/: bipartite-2.net  motif-2.net  unipartite-2.net
docs/: muritz.1.ronn
muritz/: config.h.in  configure
muritz.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
muritz/src/: alignment.cpp  alignment.hpp  muritz.cpp  network.cpp  network.hpp  roles.cpp  roles.hpp  simulated_annealing.cpp  simulated_annealing.hpp
scripts/: muritz  muritz.x
src/: Makefile.am  alignment.hpp  common.hpp  muritz.cpp  read_roles.cpp  read_roles.hpp  roles.cpp  roles.hpp  simulated_annealing.cpp  simulated_annealing.hpp
src/C/: Makefile.in  alignment.cpp  alignment.hpp  anneal.cpp  anneal.hpp  common.hpp  configure  configure.ac  muritz.cpp  muritz.h  muritz_module.cpp  network.cpp  network.hpp  pca.cpp  pca.hpp  roles.cpp  roles.hpp  simulated_annealing.cpp  simulated_annealing.cpp~  simulated_annealing.hpp  simulated_annealing.hpp~
src/C/src/: alignment.cpp  alignment.hpp  common.hpp  muritz.cpp  network.cpp  roles.cpp  roles.hpp  simulated_annealing.cpp  simulated_annealing.hpp  test1  test2  test3
src/data/: chains-2.net  chains-3.roles  test2.roles  unipartite-1.roles
src/python/: __init__.py  muritz.py  muritz.py~  option_parser.py  optionparser.py
test/: chains-1.roles  chains-2.net~  chains-2.roles  chains-3.net  medium-1.net
